--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -57,6 +57,7 @@
 
     <!-- Copy conflicts -->
     <string name="file_already_exists">Súbor %1$s už existuje</string>
+    <string name="file_already_exists_overwrite">Súbor %1$s už existuje. Prepísať?</string>
     <string name="select_an_action">Zvoľte operáciu</string>
     <string name="overwrite">Prepísať</string>
     <string name="skip">PreskočiŤ</string>
