--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -57,6 +57,7 @@
 
     <!-- Copy conflicts -->
     <string name="file_already_exists">File %1$s already exists</string>
+    <string name="file_already_exists_overwrite">File %1$s already exists. Overwrite?</string>
     <string name="select_an_action">Select an action</string>
     <string name="overwrite">Overwrite</string>
     <string name="skip">Skip</string>
