send additional debug info with emails

--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -165,6 +165,9 @@
     <string name="donate_underlined"><u>Donera</u></string>
     <string name="follow_us">Följ oss:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
+    <string name="additional_info">Additional info</string>
+    <string name="app_version">App version: %1$s</string>
+    <string name="device_os">Device OS: %1$s</string>
     <string name="donate_please">Hej,\n\nverkar som att du har använt den här appen ganska länge nu.\n\nVisste du att den inte är uppbackad av något stort företag? Att utveckla den tar tid och jag vill behålla den reklamfri, så ditt stöd skulle uppskattas.\n\nDu kan stödja mig antingen genom att köpa en betalapp Simple Thank You, genom att skicka pengar via Paypal eller genom att skicka bitcoins.\n\nMer info på http://simplemobiletools.com/donate.\n\nTack!</string>
 
     <!-- License -->
