add new strings for hiding and unhiding folders

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -128,6 +128,8 @@
     <string name="select_all">Označit vše</string>
     <string name="hide">Skrýt</string>
     <string name="unhide">Odkrýt</string>
+    <string name="hide_folder">Skrýt složku</string>
+    <string name="unhide_folder">Odkrýt složku</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
