--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -128,6 +128,8 @@
     <string name="select_all">Alle auswählen</string>
     <string name="hide">Verstecken</string>
     <string name="unhide">Nicht verstecken</string>
+    <string name="hide_folder">Hide folder</string>
+    <string name="unhide_folder">Unhide folder</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
