--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -128,6 +128,8 @@
     <string name="select_all">Seleccionar todo</string>
     <string name="hide">Ocultar</string>
     <string name="unhide">Montrar</string>
+    <string name="hide_folder">Hide folder</string>
+    <string name="unhide_folder">Unhide folder</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
