--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -128,6 +128,8 @@
     <string name="select_all">Seleziona tutto</string>
     <string name="hide">Nascondi file nascosti</string>
     <string name="unhide">Mostra file nascosti</string>
+    <string name="hide_folder">Hide folder</string>
+    <string name="unhide_folder">Unhide folder</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
