--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -129,6 +129,8 @@
     <string name="select_all">Vybrať všetko</string>
     <string name="hide">Skryť</string>
     <string name="unhide">Odkryť</string>
+    <string name="hide_folder">Skryť priečinok</string>
+    <string name="unhide_folder">Odkryť priečinok</string>
 
     <!-- Sorting -->
     <string name="sort_by">Zoradiť podľa</string>
