--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -128,6 +128,8 @@
     <string name="select_all">Välj alla</string>
     <string name="hide">Dölj</string>
     <string name="unhide">Visa</string>
+    <string name="hide_folder">Hide folder</string>
+    <string name="unhide_folder">Unhide folder</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortera efter</string>
