--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -128,6 +128,8 @@
     <string name="select_all">Tümünü seç</string>
     <string name="hide">Hide</string>
     <string name="unhide">Unhide</string>
+    <string name="hide_folder">Hide folder</string>
+    <string name="unhide_folder">Unhide folder</string>
 
     <!-- Sorting -->
     <string name="sort_by">Göre sırala</string>
