--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -61,7 +61,7 @@
     <string name="select_an_action">选择操作</string>
     <string name="overwrite">覆盖</string>
     <string name="skip">跳过</string>
-    <string name="append">Append with \'_1\'</string>
+    <string name="append">应用到 \'_1\'</string>
     <string name="apply_to_all">应用到全部冲突项</string>
 
     <!-- File picker -->
