add Gruveo in the About section

--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -169,6 +169,7 @@
     <string name="follow_us">Nasledujte nás:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Dodatočné informácie</string>
+    <string name="gruveo">Hľadáte aplikáciu na jednoduché a anonymné videohovory? Skúste môj druhý projekt</string>
     <string name="app_version">Verzia aplikácie: %1$s</string>
     <string name="device_os">Operačný systém zariadenia: %1$s</string>
     <string name="donate_please">Čauko,\n\nzdá sa, že túto aplikáciu používaš už nejaký čas.\n\nVedel si, že nie je financovaná žiadnou veľkou firmou? Jej vývoj zaberá čas a nechcem pridávať reklamy, takže by tvoja pomoc bola vítaná.\n\nMôžeš ma podporiť jednak kúpou platenej aplikácie Simple Thank You, poslaním peňazí cez Paypal, alebo poslaním Bitcoinov.\n\nViac info na http://simplemobiletools.com/donate.\n\nĎakujem!</string>
