--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -168,6 +168,7 @@
     <string name="follow_us">Folge uns:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Additional info</string>
+    <string name="gruveo">Are you looking for a simple and anonymous video calling app? Try out my other project</string>
     <string name="app_version">App version: %1$s</string>
     <string name="device_os">Device OS: %1$s</string>
     <string name="donate_please">Hey,\n\nscheint als ob diese App nun schon eine Weile in Gebrauch wäre.\n\nIst dir bewusst, dass hinter ihr kein größeres Unternehmen steht? Ihre Entwicklung kostet Zeit, und ich möchte sie werbefrei erhalten, daher würde ich Unterstützung sehr schätzen.\n\nDu kannst mich unterstützen mittels der Kauf-App Simple Thank You, durch Geldtransfer über Paypal oder mittels Senden von Bitcoins.\n\nMehr Info auf http://simplemobiletools.com/donate.\n\nVielen Dank!</string>
