--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -168,6 +168,7 @@
     <string name="follow_us">Seguici:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Additional info</string>
+    <string name="gruveo">Are you looking for a simple and anonymous video calling app? Try out my other project</string>
     <string name="app_version">App version: %1$s</string>
     <string name="device_os">Device OS: %1$s</string>
     <string name="donate_please">Hey,\n\npare che tu stia usando questa app da un po\' di tempo.\n\nLo sapevi che non è sostenuta da nessuna grande azienda? Svilupparla richiede tempo e voglio mantenerla senza pubblicità, perciò il tuo supporto sarebbe apprezzato.\n\nPuoi aiutarmi acquistando l\'app Simple Thank You, oppure inviando denaro via Paypal o Bitcoin.\n\nMaggiori informazioni su http://simplemobiletools.com/donate.\n\nGrazie!</string>
