--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -43,7 +43,7 @@
     <string name="moving_success_partial">Einige Dateien konnten nicht verschoben werden</string>
     <string name="copying_success_partial">Einige Dateien konnten nicht kopiert werden</string>
     <string name="no_files_selected">Keine Dateien ausgewählt</string>
-    <string name="saving">Saving&#8230;</string>
+    <string name="saving">Speichere&#8230;</string>
 
     <!-- Create new -->
     <string name="create_new">Neuer Ordner</string>
@@ -109,7 +109,7 @@
     <string name="light_theme">Helles Thema</string>
     <string name="dark_theme">Dunkles Thema</string>
     <string name="custom">Benutzerdefiniert</string>
-    <string name="changing_color_description">Ändern einer Farbe setzt das Thema auf Benutzerdefiniert</string>
+    <string name="changing_color_description">Ändern einer Farbe setzt das Thema auf "Benutzerdefiniert"</string>
     <string name="save">Speichern</string>
     <string name="discard">Verwerfen</string>
     <string name="undo_changes">Änderungen rückgängig machen</string>
@@ -128,8 +128,8 @@
     <string name="select_all">Alle auswählen</string>
     <string name="hide">Verstecken</string>
     <string name="unhide">Nicht verstecken</string>
-    <string name="hide_folder">Hide folder</string>
-    <string name="unhide_folder">Unhide folder</string>
+    <string name="hide_folder">Ordner verstecken</string>
+    <string name="unhide_folder">Ordner sichtbar machen</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
@@ -167,10 +167,10 @@
     <string name="donate_underlined"><u>Spenden</u></string>
     <string name="follow_us">Folge uns:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="additional_info">Additional info</string>
-    <string name="gruveo">Are you looking for a simple and anonymous video calling app? Try out my other project</string>
-    <string name="app_version">App version: %1$s</string>
-    <string name="device_os">Device OS: %1$s</string>
+    <string name="additional_info">Zusätliche Infos</string>
+    <string name="gruveo">Bist du auf der Suche nach einfachen und anonymen Videoanrufen? Probiere meine anderen Apps aus</string>
+    <string name="app_version">App Version: %1$s</string>
+    <string name="device_os">Betriebssystem: %1$s</string>
     <string name="donate_please">Hey,\n\nscheint als ob diese App nun schon eine Weile in Gebrauch wäre.\n\nIst dir bewusst, dass hinter ihr kein größeres Unternehmen steht? Ihre Entwicklung kostet Zeit, und ich möchte sie werbefrei erhalten, daher würde ich Unterstützung sehr schätzen.\n\nDu kannst mich unterstützen mittels der Kauf-App Simple Thank You, durch Geldtransfer über Paypal oder mittels Senden von Bitcoins.\n\nMehr Info auf http://simplemobiletools.com/donate.\n\nVielen Dank!</string>
 
     <!-- License -->
