ading the "Temporarily show hidden" string

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -130,6 +130,7 @@
     <string name="unhide">Odkrýt</string>
     <string name="hide_folder">Skrýt složku</string>
     <string name="unhide_folder">Odkrýt složku</string>
+    <string name="temporarily_show_hidden">Dočasně zobrazit skryté</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
