--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -130,6 +130,7 @@
     <string name="unhide">Montrar</string>
     <string name="hide_folder">Hide folder</string>
     <string name="unhide_folder">Unhide folder</string>
+    <string name="temporarily_show_hidden">Mostrar ocultos temporalmente</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
