--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -130,6 +130,7 @@
     <string name="unhide">Mostra file nascosti</string>
     <string name="hide_folder">Hide folder</string>
     <string name="unhide_folder">Unhide folder</string>
+    <string name="temporarily_show_hidden">Mostra temporaneamente nascosti</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
