--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -130,6 +130,7 @@
     <string name="unhide">Mostrar</string>
     <string name="hide_folder">Ocultar posta</string>
     <string name="unhide_folder">Mostrar pasta</string>
+    <string name="temporarily_show_hidden">Mostrar ocultas temporariamente</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
