--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -131,6 +131,7 @@
     <string name="unhide">Odkryť</string>
     <string name="hide_folder">Skryť priečinok</string>
     <string name="unhide_folder">Odkryť priečinok</string>
+    <string name="temporarily_show_hidden">Dočasne zobraziť skryté</string>
 
     <!-- Sorting -->
     <string name="sort_by">Zoradiť podľa</string>
