--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -130,6 +130,7 @@
     <string name="unhide">取消隐藏</string>
     <string name="hide_folder">隐藏文件夹</string>
     <string name="unhide_folder">取消隐藏文件夹</string>
+    <string name="temporarily_show_hidden">显示／隐藏缓存内容</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
