--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -130,6 +130,7 @@
     <string name="unhide">Nicht verstecken</string>
     <string name="hide_folder">Ordner verstecken</string>
     <string name="unhide_folder">Ordner sichtbar machen</string>
+    <string name="temporarily_show_hidden">Verstecktes temporär zeigen</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortieren nach</string>
