--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -130,6 +130,7 @@
     <string name="unhide">Unhide</string>
     <string name="hide_folder">Hide folder</string>
     <string name="unhide_folder">Unhide folder</string>
+    <string name="temporarily_show_hidden">Afficher temporairement les fichiers masqués</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
